# LR_7

./: CMakeLists.txt
Task_1/: CMakeLists.txt  Functions.cpp  Task_1.cpp
Task_2/: CMakeLists.txt  Functions.cpp  Task_2  Task_2.cpp
Task_3/: CMakeLists.txt  Functions.cpp  Task_3  Task_3.cpp
Task_4/: CMakeLists.txt  Task_4.cpp
Task_5/: CMakeLists.txt  Functions.cpp  Task_5.cpp
